// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remax render insert new element 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 5,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render insert new element 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 7,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 5,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render render correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "hello",
          "type": "plain-text",
        },
      ],
      "id": 3,
      "props": Object {
        "className": "foo",
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 1,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render renders conditional fragment correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "one",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
    Object {
      "children": Array [
        Object {
          "text": "two",
          "type": "plain-text",
        },
      ],
      "id": 4,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render renders conditional fragment correctly 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "foo",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render renders empty style 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "hello",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "style": undefined,
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render renders style 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "hello",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "style": Object {
          "height": "100px",
          "width": "100px",
        },
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render renders vendor prefix style 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "hello",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "style": Object {
          "WebkitLineClamp": 2,
          "height": "100px",
        },
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render umount component 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "text": "foo",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 3,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render umount component 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "id": 3,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;
